# main.go
@@ -115,10 +115,9 @@ func main() {
 
 	// Copernicus
 	r.HandleFunc("/copernicus/{service}/getall", mid.NaiveAuthMiddleware(handle.GetList)).Methods("GET")
-	// r.HandleFunc("/copernicus/getallads", mid.NaiveAuthMiddleware(handle.GetADSList)).Methods("GET")
 	r.HandleFunc("/copernicus/{service}/getform/{id}", mid.NaiveAuthMiddleware(handle.GetForm)).Methods("GET")
-	r.HandleFunc("/copernicus/{service}/getdataset", mid.NaiveAuthMiddleware(handle.GetDataset)).Methods("POST")
-	r.HandleFunc("/copernicus/{service}/getstatus/{id}", mid.NaiveAuthMiddleware(handle.GetStatus)).Methods("GET")
+	r.HandleFunc("/copernicus/{service}/dataset", mid.NaiveAuthMiddleware(handle.PostDataset)).Methods("POST")
+	r.HandleFunc("/copernicus/{service}/dataset/{id}", mid.NaiveAuthMiddleware(handle.GetStatus)).Methods("GET")
 
 	r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
